# buceo-feliz

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  buceofeliz-posts-dated.txt  docker-compose.prod.yml  docker-compose.small.yml  docker-compose.yml  fb_images.txt  manage.py  nginx.conf  pyproject.toml
android/: README.md  settings.gradle.kts
backups/: local_20260112_113746.sql  prod_backup_20260112_113746.sql  production_dump.sql
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docs/: TDD_INCOMPLETE_FEATURES.md
lib/django-portal-ui/: .gitignore  README.md  pyproject.toml
lib/django-portal-ui/src/django_portal_ui/: __init__.py  apps.py  conf.py  context_processors.py  mixins.py
lib/django-portal-ui/src/django_portal_ui/templates/: base.html  base_portal.html  base_public.html  base_staff.html  base_superadmin.html
lib/django-portal-ui/src/django_portal_ui/templates/portal_ui/: base.html  base_portal.html  base_public.html  base_staff.html  base_superadmin.html
lib/django-portal-ui/src/django_portal_ui/templates/portal_ui/components/: card.html  messages.html  portal_sidebar.html  public_footer.html  public_header.html  staff_sidebar.html  stats.html  superadmin_sidebar.html  table.html
lib/django-portal-ui/src/django_portal_ui/templates/portal_ui/components/forms/: button.html  eligibility_alert.html  field.html  form_errors.html
lib/django-portal-ui/src/django_portal_ui/templatetags/: __init__.py  portal_ui_tags.py
lib/django-portal-ui/tests/: conftest.py  settings.py  test_form_components.py  test_templatetags.py  urls.py
requirements/: base.txt  dev.txt  prod.txt
rust/: .env.example  Cargo.toml  Dockerfile
rust/src/: cache.rs  error.rs  main.rs
rust/src/db/: mod.rs  queries.rs
rust/src/models/: blog.rs  mod.rs  page.rs
rust/src/pricing/: calculators.rs  mod.rs  models.rs  queries.rs  requests.rs  responses.rs  routes.rs  services.rs
rust/src/routes/: app.rs  blog.rs  cms.rs  mod.rs
rust/templates/: base.html
rust/templates/app/: download.html
rust/templates/blog/: detail.html  list.html
rust/templates/cms/: page.html
rust/templates/components/blocks/: block.html
scripts/: backup-prod.sh  (+5 more)
(+154 files in other folders)
