[package]
name = "happydiving-web"
version = "0.1.0"
edition = "2021"
description = "Rust/Axum frontend for Happy Diving website"
authors = ["Happy Diving"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Error handling
thiserror = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
