[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-portal-ui"
version = "0.1.0"
description = "Reusable portal/dashboard UI components for Django"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Nestor Wheelock", email = "nestor@wheelock.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
keywords = ["django", "portal", "dashboard", "ui", "tailwind", "alpine"]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/nestorwheelock/django-portal-ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
django_portal_ui = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
pythonpath = [".", "src"]
testpaths = ["tests"]
